# lj-tick-in-amp

./: .all-contributorsrc  .copier-answers.yml  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .renovaterc.json  CONTRIBUTING.md  README.md  dev.ps1  lock-high.json  lock.json  pyproject.toml
.github/: SECURITY.md  issue_template.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yaml  ideas-for-docs.yaml  ideas-for-infrastructure.yaml  ideas.yaml  internal.yaml  q-a.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  config.yml  internal.yaml
.github/workflows/: contrib.yml  release.yml
changelog/: 8.change.md  towncrier_template.md.jinja
docs/: _toc.yml  conf.py  contributing.md  index.md  myst.yml  pdf.md  pyproject.toml  tutorial.md
docs/c_therm_tci_docs/: docstrings.py  intersphinx.py
docs/pdf_template/: template.cls  template.tex  template.yml
example/: data.csv  data.xlsx  data.xml
requirements/: requirements_dev.txt
scripts/: Sync-Py.ps1  pyproject.toml
scripts/c_therm_tci_tools/: __main__.py  sync.py
src/: c_therm_tci.py
src/c_therm_tci/: __init__.py
src/lj_tick_in_amp/: __init__.py
tests/: pyproject.toml  test_c_therm_tci.py  test_lj_tick_in_amp.py
